--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h2>Gerenciamento de Livros</h2>
             </div>
 
-            <form action="">
+            <form id="form-cadastrar">
                 <div id="main-form">
                     <div class="itens">
                         <label for="titulo">Título</label>
@@ -30,7 +30,7 @@
                         <select name="categoria" id="categoria">
                             <option value="" disabled selected>Selecione a Categoria</option>
                             <option value="drama">Drama</option>
-                            <option value="Ficcao">Ficção</option>
+                            <option value="Ficção">Ficção</option>
                             <option value="romance">Romance</option>
                             <option value="terror">Terror</option>
                           </select>
@@ -50,5 +50,6 @@
 
 
     <script src="js/script.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
