--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
             <div id="lista-livros">
                 <button id="botao" type="button" onclick="listar()">Listar livros</button>
+
+                <div id="lista-livro-grid">
+
+                </div>
             </div>
 
     </div>
